# WebCobra

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  validate.html
backend/: .env  Cargo.toml
backend/src/: main.rs
backend/src/database/: database_structure.txt
backend/src/models/: login_request.rs  mod.rs  participations.rs  prelude.rs  studies.rs  users.rs  validate_request.rs
backend/src/routes/: admin.rs  admin_login.rs  api.rs  game.rs  init_routes.rs  mod.rs  questionnaire.rs  style.rs  validate.rs
backend/src/tools/: get_configuration.rs  is_valid_json.rs  mod.rs  role_check.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20251124_225821_create_studies.rs  m20251124_225829_create_participations.rs  main.rs
public/: style.css
public/assets/: rename_photos.sh
src/: App.jsx  main-admin.jsx  main-questionnaire.jsx
src/components/: AdminPanel.jsx  ApiButton.jsx  GenerateKeys.jsx  GenerateRaport.jsx  GenerateReport.jsx  Question.jsx  Questionnaire.jsx  QuestionnaireForm.jsx  StudyAddRemove.jsx  StudyEdit.jsx  StudySelect.jsx
src/game/: PhaserGame.jsx  main.js
src/game/classes/: Player.js  SnakeGame.js
src/game/functions/: components.js  draw.js  generateReport.js  handleData.js  tools.js
src/game/scenes/: FirstBoost.js  FixedSnake.js  MainMenu.js  NextOpponent.js  Outcome.js  Preloader.js  Questionnaire.js  Snake.js  TakeApples.js  TextScene.js
static/: admin.html  adminLogin.html  questionnaire.html  validate.html
vite/: config.prod.mjs
