[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6.6"
actix-session = { version = "0.10", features = ["cookie-session"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-actix-native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
migration = { path = "../migration" }
sea-orm-migration = "1.1.19"

[dependencies.uuid]
version = "1.17.0"
features = ["v4"]
